# stockradar

./: .env.example  .gitignore  DIAGNOSIS_2026.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  README_CN.md  REFACTOR_BACKTEST_REPORT.md  ROADMAP.md  STATUS.md  data.json  index.html  keepalive.sh  pyproject.toml  requirements.txt  stockradar-bot.service
archive/: evolver.py
archive/docs/: EVOLVER_FIVE_DIMENSIONS.md  MULTI_AGENT_ARCHITECTURE.md
archive/knowledge/: factor_failures.md  failure_patterns.md  market_patterns.md  regime_history.md
archive/scripts/: bootstrap.py  daily_update.py  run_backtest.py
archive/src_bot/: commands.py  telegram_bot.py
archive/src_core/: message_bus.py
archive/src_data/: fetcher.py  store.py  validator.py  yahoo_adapter.py
archive/src_strategy/: continuous_score.py
config/: factors.yaml  settings.yaml  strategies.yaml
data/: hs300_codes.txt  stock_names.csv  trade_log.json
data/tracking/: closed_trades.json
docs/: data.json  index.html
ideas/: github_ideas.md
knowledge/: error_patterns.json  external_learnings.md  factor_discoveries.md  factor_failures.md  failure_patterns.md  github_scan_history.json  lessons_learned.md  market_patterns.md  optuna_results.json  params_history.json  regime_history.md  strategy_evolution.md
knowledge/evolution_reports/: 2026-04.md  2026-06.md
knowledge/trade_reviews/: 2026-04-07.json  2026-04-07.md  2026-04-08.json  2026-04-08.md  2026-04-09.json  2026-04-09.md  2026-04-10.json  2026-04-10.md  2026-04-13.json  2026-04-13.md  2026-04-20.json  2026-04-20.md  2026-04-22.json  2026-04-23.json  2026-04-23.md  2026-04-24.json  2026-04-24.md  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-29.md  2026-05-06.json  2026-05-06.md  2026-05-07.json  2026-05-07.md  2026-05-08.json  2026-05-08.md  2026-05-12.json  2026-05-12.md  2026-05-13.json  2026-05-13.md  2026-05-14.json  2026-05-14.md  2026-05-15.json  2026-05-15.md  2026-05-18.json  2026-05-18.md  2026-05-19.json  2026-05-19.md  2026-05-26.json  (+31 more)
memory/: 2026-04-03.md
output/: backtest_summary.csv  d1_evolved_nav.csv  d1_static_nav.csv  enhanced_backtest_nav.csv  enhanced_backtest_trades.csv  enhanced_v2_nav.csv  enhanced_v2_trades.csv  full_backtest_nav.csv  full_backtest_trades.csv  nav_history.csv  quick_backtest_nav.csv  quick_backtest_trades.csv  walk_forward_results.csv
scripts/: analyze_backtest.py  compare_backtest.py  d1_evolution_backtest.py  daily_update.py  daily_update_bs.py  daily_update_qv.py  e2e_test.py  enhanced_backtest.py  enhanced_backtest_v2.py  export_pages.py  export_pages_deploy.py  export_pages_deploy_fix.py  factor_ic_analysis.py  fetch_growth.py  fetch_hs300.py  fix_bot.py  fix_pages.py  full_backtest.py  incremental_update.py  init_data.py  nav_backtest.py  quick_backtest.py  run_bot.pid  run_bot.py  run_bot.py.bak.202604221705  run_bot.py_PATCH  system_init.py  test_e2e.py  v2_backtest.py  verify_all.py  walk_forward.py  weekend_optimize.py  weekend_test.py  weekly_report.py
src/agents/: __init__.py  analyst.py  evolver.py  reporter.py  router.py  trader.py  trader.py.backup
src/backtest/: __init__.py  a_share_constraints.py  engine.py  engine_risk_integration.py  report.py
src/bot/: formatters.py
src/core/: __init__.py  agent_base.py  context.py  evolution_interface.py  orchestrator.py  tool_registry.py
src/data/: baostock_adapter.py  cache.py  finbert_adapter.py  industry.py  mootdx_adapter.py  news_sentiment.py  qveris_adapter.py  (+3 more)
tests/: test_core.py  test_dual_momentum_auto_tuner.py  test_inverse_volatility.py  test_kelly_agreement_weekly.py  test_risk_management.py  test_time_stop_loss.py  test_wednesday_risk.py
(+65 files in other folders)
