[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockradar"
version = "0.6.0"
description = "AI-powered A-share stock screening system with multi-agent architecture"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "rbian"},
]
keywords = ["stock", "a-share", "quant", "ai", "multi-agent", "factor-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "baostock>=0.8.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "requests>=2.28",
    "python-telegram-bot>=22.0",
    "openai>=1.0",
    "scipy>=1.10",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/rbian/stockradar"
Repository = "https://github.com/rbian/stockradar"
Documentation = "https://github.com/rbian/stockradar/tree/master/docs"

[project.scripts]
stockradar-bot = "scripts.run_bot:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
